tests/operator/multiply_num_nonnum.rev
1.5 * "1" // error: operation not supported